--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import url("../assets/CrushyourenemiesBook-z48L.ttf");
+/* @import url("../assets/CrushyourenemiesBook-z48L.ttf"); */
 @import url("../assets/Herculanum.ttf");
 /* Global styles */
 .window-app {
