--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -41,15 +41,19 @@
           <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
           <label class="resource-label">{{localize 'HYP3E.target'}}</label>
           <input type="text" name="system.tn" value="{{system.tn}}" data-dtype="String"/>
-          <label class="resource-label">{{localize 'HYP3E.blindRoll'}}</label>
-          <select name="system.blindRoll">
-            {{!-- {{#select system.blindRoll}} --}}
+          {{!-- <label class="resource-label">{{localize 'HYP3E.blindRoll'}}</label>
+          <input type="text" name="system.blindRoll" value="{{system.blindRoll}}" data-dtype="String" disabled/> --}}
+          {{!-- <select name="system.blindRoll">
             <option value=""></option>
             {{selectOptions blindRollOpts selected=system.blindRoll localize=true}}
-            {{!-- <option value="true">{{localize 'HYP3E.true'}}</option>
-            <option value="false">{{localize 'HYP3E.false'}}</option>
-            {{/select}} --}}
-          </select>
+          </select> --}}
+          <label class="resource-label">{{localize 'HYP3E.spell.save'}}</label>
+          <div class="form-fields">
+            <select name="system.save">
+              <option value=""></option>
+              {{selectOptions saveThrows selected=system.save localize=true}}
+            </select>
+          </div>
         </div>
 
         {{!-- Description Tab --}}
