Change auto-calc AC to a configurable option.

--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -57,11 +57,11 @@
         </div>
         <div class="resource-content flexrow flex-group-center">
           <label for="system.ac.value" class="combat-label">{{localize "HYP3E.armor.armorClass"}}</label>
-          <input type="text" name="system.ac.value" value="{{system.ac.value}}" data-dtype="Number" disabled/>
+          <input type="text" name="system.ac.value" value="{{system.ac.value}}" data-dtype="Number" />
           <label for="system.ac.dr" class="combat-label">{{localize "HYP3E.armor.dr"}}</label>
-          <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" disabled/>
+          <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
           <label for="system.unarmoredAc" class="combat-label">{{localize "HYP3E.armor.unarmored"}}</label>
-          <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" disabled/>
+          <input type="text" name="system.unarmoredAc" value="{{system.unarmoredAc}}" />
         </div>
         <div class="resource-content flexrow flex-group-center">
           <span></span><span></span>
@@ -86,35 +86,35 @@
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="{{localize 'HYP3E.dataLabel.deathSave'}}">
           {{!-- <img src="systems/hyp3e/assets/crossing_bones_skull.jpg" width="50"> --}}
-          <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label>
+          <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
           </span>
         <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.device.value}}" data-label="{{localize 'HYP3E.dataLabel.deviceSave'}}">
-          <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label>
+          <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.transformation.value}}" data-label="{{localize 'HYP3E.dataLabel.xformSave'}}">
-          <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label>
+          <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.avoidance.value}}" data-label="{{localize 'HYP3E.dataLabel.avoidanceSave'}}">
-          <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label>
+          <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.sorcery.value}}" data-label="{{localize 'HYP3E.dataLabel.sorcerySave'}}">
-          <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label>
+          <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.sorcery.value" value="{{system.saves.sorcery.value}}"/>
