added comment to saving throw icon

--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -85,6 +85,7 @@
     <div class="saves-block flexrow flex-between">
       <div class="combat-block flexrow flex-group-center">
         <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="{{localize 'HYP3E.dataLabel.deathSave'}}">
+          {{!-- I thought it would be cool to have little saving throw icons for each type... --}}
           {{!-- <img src="systems/hyp3e/assets/crossing_bones_skull.jpg" width="50"> --}}
           <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label><br />
           <i class="fas fa-dice-d20"></i>
