Issue 10: Changes to XP number formatting

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -41,17 +41,17 @@
           </div>
           <div class="flexrow flex-group-center">
             <label for="system.details.xp.value" class="header-label align-left">{{localize "HYP3E.details.xp"}}</label>
-            <input type="text" name="system.details.xp.value" value="{{system.details.xp.value}}" data-dtype="Number" />
+            <input type="text" name="system.details.xp.value" value="{{system.details.xp.value}}" />
             <span></span>
             <label for="system.details.xp.toNextLvl" class="header-label flexlarge align-left">{{localize "HYP3E.details.toNextLvl"}}</label>
-            <input type="text" name="system.details.xp.toNextLvl" value="{{system.details.xp.toNextLvl}}" data-dtype="Number" />
+            <input type="text" name="system.details.xp.toNextLvl" value="{{system.details.xp.toNextLvl}}" />
           </div>
           <div class="flexrow flex-group-center">
             <label for="system.details.xp.bonus" class="header-label align-left">{{localize "HYP3E.bonus"}}</label>
-            <input type="text" name="system.details.xp.bonus" value="{{system.details.xp.bonus}}" data-dtype="Number" /> %
+            <input type="text" name="system.details.xp.bonus" value="{{system.details.xp.bonus}}" /> %
             <span></span>
             <label for="system.details.xp.primeAttr" class="header-label flexlarge align-left">{{localize "HYP3E.details.primeAttr"}}</label>
-            <input type="text" name="system.details.xp.primeAttr" value="{{system.details.xp.primeAttr}}" data-dtype="String" />
+            <input type="text" name="system.details.xp.primeAttr" value="{{system.details.xp.primeAttr}}" />
           </div>
           <div class="flexrow flex-group-center">
             <label for="system.knownLanguages" class="header-label align-left">{{localize 'HYP3E.details.languages'}}</label>
