--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -34,12 +34,6 @@
           <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.level12"}}</label>
           <input type="text" name="system.proficiencies.lvl12" value="{{system.proficiencies.lvl12}}"/>
         </div>
-        {{!-- <div class="resource-content flexrow flex-group-center">
-          <label for="system.proficiencies" class="combat-label">{{localize "HYP3E.wpnSkills"}}</label>
-        </div>
-        <div class="resource-content flexrow flex-group-center">
-          <textarea name="system.proficiencies">{{system.proficiencies}}</textarea>
-        </div> --}}
       </div>
       <div class="combat-block flexcol">
         <div class="resource-content flexrow flex-group-center">
@@ -80,7 +74,7 @@
     <div class="combat-block flexrow">
       <div class="resource-content flexrow flex-group-center">
         <h3>{{localize "HYP3E.headers.savingThrows"}}</h3>
-      </div>  
+      </div>
     </div>
     <div class="saves-block flexrow flex-between">
       <div class="combat-block flexrow flex-group-center">
@@ -122,6 +116,11 @@
       </div>
     </div>
 
+    <div class="combat-block flexrow">
+      <div class="resource-content flexrow flex-group-center">
+        <h3>{{localize "HYP3E.headers.weaponsAndArmor"}}</h3>
+      </div>
+    </div>
     {{!-- Weapons appear here --}}
     <ol class="items-list">
       <li class="item flexrow items-header">
@@ -157,7 +156,6 @@
             <div class="item-prop">{{numberFormat item.system.atkMod decimals=0 sign=true}}</div>
             <div class="item-prop">{{numberFormat item.system.dmgMod decimals=0 sign=true}}</div>
             <div class="item-prop">{{item.system.damage}}</div>
-            {{!-- <div></div> --}}
             <div class="item-controls">
               <a class="item-control item-equip {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
               <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
@@ -242,7 +240,6 @@
             <div class="item-prop">{{item.system.ac}}</div>
             <div class="item-prop">{{item.system.dr}}</div>
             <div class="item-prop">{{item.system.mv}}</div>
-            {{!-- <div></div> --}}
             <div class="item-controls">
               <a class="item-control item-equip{{#unless item.system.equipped}} item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
               <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
