css and html updates to cleanup UI

--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -341,6 +341,9 @@ textarea {
 .hyp3e h1, .hyp3e h2, .hyp3e h3 {
   font-family: "Herculanum", sans-serif;
 }
+.hyp3e h2 {
+  font-size: x-large;
+}
 .hyp3e .hyp3e-metal img {
   border: none;
   max-width: 200px;
