--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -443,8 +443,8 @@ textarea {
 
 /* Character Combat-tab styles */
 .hyp3e .combat-block {
-  padding: 0 2px;
-  margin-right: 5px;
+  /* padding: 0 2px; */
+  /* margin-right: 5px; */
   margin-bottom: 3px;
   /* background-color: aqua; */
 }
