Attack roll debugging & cleanup; npc hit dice bug fix

--- a/templates/actor/parts/npc-abilities.hbs
+++ b/templates/actor/parts/npc-abilities.hbs
@@ -15,7 +15,7 @@
           <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
         </div>
         <div class="attribute-row flexrow">
-          <span class="combat-label rollable" data-roll="{{system.hd}}" data-label="{{localize 'HYP3E.dataLabel.hitDieRoll'}}">
+          <span class="combat-label rollable" data-roll="{{system.hd}}" data-roll-type="basic" data-roll-target="" data-label="{{localize 'HYP3E.details.hitDie'}}">
             <label for="system.hd">{{localize "HYP3E.details.hitDice"}}</label> 
             <i class="fas fa-dice-d6"></i>
           </span>
