--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -79,10 +79,10 @@
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
-        <label class="resource-label">{{localize 'HYP3E.dataLabel.containedItemIds'}}</label>
+        {{!-- <label class="resource-label">{{localize 'HYP3E.dataLabel.containedItemIds'}}</label>
         <input type="text" name="system.itemIds" value="{{system.itemIds}}"/>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
-        <input type="text" name="system.containerId" value="{{system.containerId}}"/>
+        <input type="text" name="system.containerId" value="{{system.containerId}}"/> --}}
       </div>
     </div>
   </section>
