--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -91,8 +91,17 @@
         </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
+        {{#unless system.isContainer}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
         <input type="text" name="system.containerId" value="{{system.containerId}}"/>
+        {{/unless}}
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.container'}}</label>
+          <input id="system.isContainer" name="system.isContainer" type="checkbox" {{checked system.isContainer}}>
+          <div class="flex-xlarge">The Container tag allows this item to contain other non-container items.</div>
+        </div>
+        {{!-- <label class="resource-label">{{localize 'HYP3E.dataLabel.containedItemIds'}}</label>
+        <input type="text" name="system.itemIds" value="{{system.itemIds}}"/> --}}
       </div>
     </div>
   </section>
