--- a/templates/chat/apply-damage.hbs
+++ b/templates/chat/apply-damage.hbs
@@ -1,11 +1,4 @@
-<section class="hyp3e chat-message">
-    <div class="hyp3e chat-block">
-        <div class="flexrow chat-header">
-            <div class="chat-title">
-                <h2>{{title}}</h2>
-            </div>
-            {{!-- <div class="chat-img" style="background-image:url({{image}})"></div> --}}
-        </div>
-        <div class="chat-details">{{{body}}}</div>
-    </div>
-</section>
+<div class="message-content">
+    <h4>{{title}}</h4>
+    <div class="chat-details">{{{body}}}</div>
+</div>
