--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -325,6 +325,39 @@ textarea {
   margin-right: 10px;
   border: none;
 }
+
+/* Sets the position of the health-bar and strain-bar and sets it to the propper size. */
+.hyp3e .health-bar{
+  position: relative;
+  bottom: 0px;
+
+  width: 100%;
+  height: 20px;
+
+  border: 1px solid rgb(170,170,170);
+
+  box-shadow: 0 0 5px inset rgb(0,0,0,0.4);
+  background-color: whitesmoke;
+}
+
+.hyp3e .health-bar .health-fill{
+  background: linear-gradient(45deg, rgba(48,121,22,1) 0%, rgba(97,190,80,1) 100%);
+  height: 100%;
+}
+
+/* Positions the HP text in the center of the healthbar or strainbar */
+.hyp3e .health-text{
+  display: flex;
+  position: relative;
+  top: -100%;
+  
+  width: 100%;
+  height: 100%;
+
+  justify-content: center;
+}
+
+
 .hyp3e .sheet-header .header-block {
   -webkit-box-flex: 1;
   -ms-flex: 1;
